# mingo-system

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  GEMINI.md  LICENSE  README.md  dev.code-workspace  mingo  mingo-system.code-workspace  pyproject.toml  requirements.txt
docs/: GETTING_STARTED.md  ORACLE_SETUP.md
scripts/: bootstrap.sh  ensure-venv.sh  mingo-env.sh  start.sh  stop.sh  test_oracle_tec.py  verify-api-key.sh  vpn_diagnostic.py
src/flux_scraper/: README.md  pyproject.toml  requirements.txt
src/flux_scraper/src/flux_scraper/: __init__.py  cli.py
src/flux_scraper/src/flux_scraper/core/: __init__.py  flow.py  scraper.py  transformer.py
src/flux_scraper/src/flux_scraper/flows/: __init__.py
src/git_protocol/: .gitignore  README.md  __init__.py  maintenance.py  pyproject.toml  scaffold.py  submodules.py
src/git_protocol/src/: __init__.py
src/git_protocol/src/git_protocol/: cli.py  clone.py  core.py  scaffold.py
src/git_protocol/src/git_protocol/templates/: gitignore.tmpl  pyproject.tmpl  vscode_settings.tmpl
src/git_protocol/templates/: pre-commit.tmpl  pyproject.tmpl  requirements.tmpl
src/oracle-tec/: README.md  pyproject.toml
src/oracle-tec/src/oracle_tec/: __init__.py  client.py  manager.py
