[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-scraper"
version = "0.1.0"
description = "Systematic, OOP-based web scraping and ETL orchestration library."
dependencies = [
    "python-dotenv>=1.2.2",
    "playwright>=1.40.0",
    "pandas>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
flux-scraper = "flux_scraper.cli:main"
