[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-protocol"
version = "0.1.0"
dependencies = ["python-dotenv>=1.2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
git_protocol = ["templates/*"]

[project.scripts]
git-protocol = "git_protocol.cli:main"
